Thu Nov  9 13:53:21 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * doc/Makefile.in: use internals.html/index.html as dependency target
    so we only rebuild the docs when really needed

Wed Nov  8 14:55:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * Makefile.conf, debian/rules: no longer install any emacs support stuff
  * debian/50dpkg-dev.el, scripts/debian-changelog-mode.el: removed
  * archtable: add powerpc-linux-gnu entry
  * debian/dpkg.conffiles: sync with dpkg-17 tree

Tue Nov  7 22:05:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * lib/myopt.c: chop read lines in myfileopt

Tue Nov  7 00:45:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-statoverride.8: fix typos
  * scripts/dpkg-statoverride.pl:
    + replace dpkglibdir with admindir (oops)
    + open new file for writing in WriteOverrides
  * scripts/update-alternatives.pl: handle the fact that the Makefile
    changes our $admindir assignment so we have to manually add
    "/alternatives" to the path

Mon 06 Nov 07:24:11 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated.

Sun Nov  5 16:28:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * debian/dpkg.conffiles: added missing file
  * debian/rules, main/main.c: rename dpkg configfile to dpkg.cfg
  * debian/rules, debian/origin: add new origin file
  * scripts/dpkg-gencontrol.pl: rename Bugs-Submit-To to Bugs
  * debian/control: add Bugs and Origin entries
  * lib/database.c, parse.c: add Origin and Bugs to fieldinfos table
  * include/dpkg-db.h: add Origin and Bugs to pkginfoperfile struct
  * dpkg-deb/main.c, dpkg-deb/dpkg-deb.h: fix type for compression
  * Makefile.in: install origin file
  * scripts/dpkg-buildpackage.sh: fix logic error in source-only building
  * scripts/dpkg-source.pl: handle Bugs and Origin tags

Sun Nov  5 10:00:31 EST 2000 Ben Collins <bcollins@debian.org>

  * Create branch point for versioned provides
  * Revert patches for it from the HEAD
