@@ -1,3 +1,8 @@
+Thu Nov 23 15:48:53 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-buildpackage.sh: Name .changes file properly if
+    we are doing a source-only build
+
 Thu Nov  9 13:53:21 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/Makefile.in: use internals.html/index.html as dependency target
